Login social y demas cosas

--- a/back/package.json
+++ b/back/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
-    "express": "*",
+    "axios": "^0.18.1",
+    "express": "^4.17.1",
     "fetch": "^1.1.0",
+    "googleapis": "^39.2.0",
     "jwt-decode": "^2.2.0",
-    "mongoose": "*",
-    "nodemon": "*",
+    "mongoose": "^5.5.12",
+    "nodemon": "^1.19.1",
     "socket.io": "^2.1.1"
   }
 }
